[project]
name = "fiverr-brianley"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "fastapi>=0.120.1",
    "google-cloud-dialogflow-cx>=2.0.0",
    "google-genai>=1.46.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "twilio>=9.8.5",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
